--- a/bentota.html
+++ b/bentota.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;700&family=Noto+Emoji&family=Poppins:wght@100;300;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/kosgoda.css">
+    <link rel="stylesheet" href="css/bentota.css">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <title>kosgoda</title>
+    <title>bentota</title>
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
     <div class="main-viewport">
         <div class="main-viewport-images">
             <div>
-                <img class="main-viewport-image" src="images/bent.jpg" alt="">
+                <img class="main-viewport-image" src="images/bent2.jpg" alt="">
             </div>
         </div>
         <div class="main-viewport-header">
@@ -57,142 +57,108 @@
     </div>
 
     <section id="bentota-first-id" class="bentota-first">
-        <div class="bentota-first-text-container">
-            <h3>About</h3>
-            <hr>
-            <p>Bentota, located on the southwestern coast of Sri Lanka, is a tropical paradise known for its stunning beaches, lush greenery, and vibrant cultural heritage. This coastal town offers a perfect blend of relaxation, adventure, and cultural exploration, making it a popular destination for travelers.</p>
-            <br>
-            <p>Bentota's pristine beaches are the main attraction for visitors. With their golden sands, clear turquoise waters, and swaying palm trees, these beaches provide an idyllic setting for sunbathing, swimming, and water sports. Whether you want to soak up the sun, try your hand at surfing or jet skiing, or simply take a leisurely stroll along the shore, Bentota's beaches offer a range of activities to suit every traveler's preferences.</p>
-        </div>
-        <div class="bentota-first-image-container">
-            <img src="images/pollution2.jpg" alt="">
-            <img class="second-image" src="images/pollution2.jpg" alt="">
-            <img src="images/pollution2.jpg" alt="">
+        <div class="bentota-first-main-container">
+            <div class="bentota-first-text-container">
+                <h3>About</h3>
+                <hr>
+                <p>Bentota, located on the southwestern coast of Sri Lanka, is a tropical paradise known for its stunning beaches, lush greenery, and vibrant cultural heritage. This coastal town offers a perfect blend of relaxation, adventure, and cultural exploration, making it a popular destination for travelers.</p>
+                <br>
+                <p>Bentota's pristine beaches are the main attraction for visitors. With their golden sands, clear turquoise waters, and swaying palm trees, these beaches provide an idyllic setting for sunbathing, swimming, and water sports. Whether you want to soak up the sun, try your hand at surfing or jet skiing, or simply take a leisurely stroll along the shore, Bentota's beaches offer a range of activities to suit every traveler's preferences.</p>
+            </div>
+            <div class="bentota-first-image-container">
+                <img src="images/pollution2.jpg" alt="">
+                <img src="images/pollution2.jpg" alt="">
+            </div>
         </div>
     </section>
 
     <section class="bentota-second">
-        <div class="bentota-second-text-container">
-            <h3>Kosgoda Turtle Hatchery</h3>
-            <hr>
-            <p>The hatchery serves as a sanctuary for various species of sea turtles, including the Green Turtle, Hawksbill Turtle, Olive Ridley Turtle, Loggerhead Turtle, and Leatherback Turtle. It provides a safe environment for these turtles to lay their eggs, ensuring their successful hatching and subsequent release into the ocean.</p>
-            <br>
-            <p>One of the highlights of visiting the hatchery is the opportunity to witness the release of baby turtles into the sea. This awe-inspiring experience allows visitors to witness the beginning of these tiny turtles' incredible journey as they make their way into the vast ocean, navigating the waves and embarking on their lifelong adventure.</p>
-            <br>
-            <p>The Bentota Sea Turtle Hatchery also actively participates in research programs aimed at understanding the behavior and life cycles of sea turtles. By collecting valuable data and conducting scientific studies, the hatchery contributes to the overall conservation efforts and helps raise awareness about the importance of protecting these endangered species.</p>
-        </div>
-        <div class="bentota-second-first-image-container">
-            <img class="bentota-second-first-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="bentota-second-first-image-container-two" src="images/pollution2.jpg" alt="">
-        </div>
-        <div class="bentota-second-second-image-container">
-            <img class="bentota-second-second-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="bentota-second-second-image-container-two" src="images/pollution2.jpg" alt="">
-        </div>
-        <div class="bentota-second-third-image-container">
-            <img class="bentota-second-third-image-container-one" src="images/pollution2.jpg" alt="">
-            <img class="bentota-second-third-image-container-two" src="images/pollution2.jpg" alt="">
+        <div class="bentota-second-main-container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253758.20788629504!2d79.71706138671874!3d6.3976099999999985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22eab0662a311%3A0x3f76eca26e608182!2sSea%20Turtle%20Project!5e0!3m2!1sen!2slk!4v1684875596849!5m2!1sen!2slk"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="bentota-second-text-container">
+                <h3>Bentota Turtle Hatchery</h3>
+                <hr>
+                <p>The hatchery serves as a sanctuary for various species of sea turtles, including the Green Turtle, Hawksbill Turtle, Olive Ridley Turtle, Loggerhead Turtle, and Leatherback Turtle. It provides a safe environment for these turtles to lay their eggs, ensuring their successful hatching and subsequent release into the ocean.</p>
+                <br>
+                <p>One of the highlights of visiting the hatchery is the opportunity to witness the release of baby turtles into the sea. This awe-inspiring experience allows visitors to witness the beginning of these tiny turtles' incredible journey as they make their way into the vast ocean, navigating the waves and embarking on their lifelong adventure.</p>
+                <br>
+                <p>The Bentota Sea Turtle Hatchery also actively participates in research programs aimed at understanding the behavior and life cycles of sea turtles. By collecting valuable data and conducting scientific studies, the hatchery contributes to the overall conservation efforts and helps raise awareness about the importance of protecting these endangered species.</p>
+            </div>
         </div>
     </section>
 
     <section class="bentota-third">
         <div class="bentota-third-container">
             <div class="bentota-third-text-container">
-                <h3>Discover the various ways to engage with the Kosgoda Sea Turtle Hatchery</h3>
+                <h3>What and Why is it for?</h3>
                 <hr>
             </div>
-            <div class="bentota-third-first-item-container">
-                <div class="bentota-third-item-one">
-                    <h4>Galle Day Tour</h4>
-                    <br>
-                    <p>Uncover the treasures of Galle, a UNESCO World Heritage Site, during this concise half-day private tour. Embark on a private boat safari through the enchanting mangrove forests of Bentota River. Witness the wonder of baby sea turtles at the Kosgoda Sea Turtle Conservation Project. Delve into the captivating history of Galle's Old Town and its impressive fortifications. Lastly, visit the Community Tsunami Museum for a poignant glimpse into the city's resilience. Experience the highlights of Galle in a concise and immersive adventure.</p>
-                    <button class="button-for-all">
-                        <a href="https://www.tripadvisor.com/AttractionProductReview-g304136-d18910522-Galle_Day_Tour-Kalutara_Western_Province.html">
-                            <span>
-                                See More
-                            </span>
-                        </a>
-                    </button>
+            <div class="bentota-third-item-container">
+                <div class="bentota-third-first-item-container">
+                    <div class="bentota-third-item-one">
+                        <h4>The Importance</h4>
+                        <br>
+                        <p>Turtle eggs that have been left on their own are vulnerable to predators and helpless against them. Additionally, there is a chance that local fishermen will find the eggs and sell them to poachers, who would then sell them on the black market. The hatcheries address this by paying the fisherman more for their eggs, which incentivizes them to keep bringing in the imperiled eggs to a safer area.</p>
+                    </div>
+                    <img src="images/pollution2.jpg" alt="">
                 </div>
-                <img src="images/pollution2.jpg" alt="">
-            </div>
-            <div class="bentota-third-second-item-container">
-                <img src="images/pollution2.jpg" alt="">
-                <div class="bentota-third-item-two">
-                    <h4>Day Excursions to Galle Fort & Bentota from Colombo</h4>
-                    <br>
-                    <p>Galle, located in the southwest of Sri Lanka, is a vibrant coastal city that holds immense historical significance. It
-                    was once the bustling main port of the island until the Portuguese arrived in the 16th century. Today, Galle is
-                    celebrated as one of the country's most renowned beach destinations. As you explore this captivating city, keep an eye
-                    out for local fishermen selling their fresh catches along the roadside, while the breathtaking green and turquoise
-                    beaches that stretch along the coast captivate your senses. If you long to feel the soft sand between your toes, simply
-                    inform our chauffeur, who will gladly guide you to a perfect spot for relaxation.</p>
-                    <button class="button-for-all">
-                        <a href="https://www.tripadvisor.com/AttractionProductReview-g2674028-d15040709-Day_Excursions_to_Galle_Fort_Bentota_from_Colombo-Ragama_Western_Province.html">
-                            <span>
-                                See More
-                            </span>
-                        </a>
-                    </button>
+                 <div class="bentota-third-second-item-container">
+                    <div class="bentota-third-item-two">
+                        <h4>Conservation Effort</h4>
+                        <br>
+                        <p>When the eggs arrive at the hatchery, they are carefully buried in sand until they break free of their shells, at which point they are transported and put into tanks where they will spend the first few days of their life. This increases their chances of surviving by giving them a chance to get stronger before being returned to the perils of the water. In this way, several turtle species are preserved.</p>
+                    </div>
+                    <img src="images/pollution2.jpg" alt="">
+                </div>
+               <div class="bentota-third-third-item-container">
+                    <div class="bentota-third-item-three">
+                        <h4>What You Can Experience</h4>
+                        <br>
+                        <p>The newborn turtles are released on the beach at dusk, and you can watch them make their way back to the ocean. Visitors are urged to use caution while young turtles are released back into the water. Loud sounds, bright lights, and flash photography are prohibited because they could cause newborn turtles to mistake them for the moon over the water, which would prevent them from finding their way back home.</p>
+                    </div>
+                    <img src="images/pollution2.jpg" alt="">
                 </div>
             </div>
-            <div class="bentota-third-third-item-container">
-                <div class="bentota-third-item-three">
-                    <h4>Yala Safari Day Trip</h4>
-                    <br>
-                    <p>Bentota Travel Mart (BTM) offers an exciting Yala Safari Day Trip for travelers staying in Bentota, Induruwa, Kosgoda,
-                    Ahungalla, Balapitiya, Ambalangoda, Hikkaduwa, Rathgama, Aluthgama, Beruwala, Maggona, Kalutara, Waskaduwa, and Wadduwa.
-                    This well-organized excursion includes convenient free pick-up and drop-off services from these areas. For those seeking
-                    an adventurous wildlife experience, Yala National Park is the ultimate destination, renowned for its incredible
-                    sightings of leopards, bears, elephants, and a diverse array of animals.</p>
-                    <button class="button-for-all">
-                        <a href="https://www.tripadvisor.com/AttractionProductReview-g297895-d15240781-Yala_Safari_Day_Trip_from_Bentota_Kalutara_Ahungalla_Hikkaduwa-Bentota_Galle_Distr.html">
-                            <span>
-                                See More
-                            </span>
-                        </a>
-                    </button>
-                </div>
-                <img src="images/pollution2.jpg" alt="">
-            </div>
-            <div class="bentota-third-fourth-item-container">
-                <img src="images/pollution2.jpg" alt="">
-                <div class="bentota-third-item-four">
-                    <h4>Trip with Stilt Fishermen</h4>
-                    <br>
-                    <p>In the coastal village of Kosgoda, Sri Lanka, a captivating sight awaits visitors—the stilt fishermen. These skilled
-                    fishermen have mastered a unique fishing technique that has been passed down through generations. Perched precariously
-                    on wooden stilts, they cast their lines into the tranquil waters, patiently waiting for their catch. This age-old
-                    practice has become a symbol of the island's fishing heritage.</p>
-                    <button class="button-for-all">
-                        <a href="https://www.tripadvisor.com/AttractionProductReview-g499081-d15305723-Galle_Day_Trip_with_River_Safari_Sea_Turtle_Stilt_Fishermen-Wadduwa_Western_Provin.html">
-                            <span>
-                                See More
-                            </span>
-                        </a>
-                    </button>
-                </div>
-            </div>
+        </div>
+    </section>
+
+    <section class="bentota-image">
+        <div class="bentota-image-container-one">
+            <img class="bentota-image-container-one-img1" src="images/pollution2.jpg" alt="">
+            <img class="bentota-image-container-one-img2" src="images/pollution2.jpg" alt="">
+        </div>
+        <div class="bentota-image-container-two">
+            <img class="bentota-image-container-two-img1" src="images/pollution2.jpg" alt="">
+            <img class="bentota-image-container-two-img2" src="images/pollution2.jpg" alt="">
         </div>
     </section>
 
     <section class="bentota-fourth">
         <div class="bentota-fourth-container">
             <h2>F.A.Q</h2>
-            <hr><br>
-            <h3>What is Kosgoda famous for?</h3>
-            <h4>Kosgoda, located along the southwestern coast of Sri Lanka, is famous for its conservation efforts and its significant role in protecting sea turtles. This small coastal village has gained recognition as a prime destination for turtle conservation and serves as a sanctuary for these magnificent creatures.</h4>
+            <hr>
             <br>
-            <h3>What is the best time to visit Kosgoda?</h3>
-            <h4>The best time to visit Kosgoda, Sri Lanka is typically from December to March. During these months, the weather is generally dry and sunny, making it perfect for outdoor activities and beach exploration. The temperature during this period ranges from 25°C to 30°C, providing pleasant and comfortable conditions for travelers.</h4>
-            <br>
-            <h3>What are the best places to visit in Kosgoda?</h3>
-            <ul>
-                <li><a href="https://www.tripadvisor.com/Restaurant_Review-g499082-d23643757-Reviews-Oruwa_Beach_Restaurant-Kosgoda_Galle_District_Southern_Province.html">Oruwa Beach Restaurant</a></li>
-                <li><a href="https://www.tripadvisor.com/Restaurant_Review-g499082-d1095208-Reviews-SANKAREST_Garden_Restaurant-Kosgoda_Galle_District_Southern_Province.html">SANKAREST Garden Restaurant</a></li>
-                <li><a href="https://www.tripadvisor.com/Attraction_Review-g499082-d13971174-Reviews-Galbokka_Sea_Turtle_Hatchery-Kosgoda_Galle_District_Southern_Province.html">Galbokka Sea Turtle Hatchery</a></li>
-                <li><a href="https://www.tripadvisor.com/Restaurant_Review-g499082-d20810879-Reviews-Yathra_Restaurant_Bar-Kosgoda_Galle_District_Southern_Province.html">Yathra Restaurant & Bar</a></li>
-            </ul>
+            <div class="bentota-fourth-sub-container">
+                <div class="bentota-fourth-sub-item-one">
+                    <h3>What is Bentota famous for?</h3><br>
+                    <h4>Bentota is renowned for its production of toddy, an alcoholic drink crafted from coconut nectar. Additionally, the destination features a turtle hatchery situated on Induruwa beach, where visitors can observe and support the conservation efforts for these magnificent creatures.</h4>
+                </div>
+                <div class="bentota-fourth-sub-item-two">
+                    <h3>What is the best time to visit Bentota?</h3><br>
+                    <h4>The best time to visit Bentota is during the dry season, which occurs from November to April. During this period, the weather in Bentota is warm and sunny with minimal rainfall, creating ideal conditions for outdoor activities and beach-related adventures. The sea is generally calm, making it perfect for swimming, water sports, and boat rides.</h4>
+                </div>
+                <div class="bentota-fourth-sub-item-three">
+                    <h3>What are the best places to visit in Bentota?</h3><br>
+                    <ul>
+                        <li><a href="https://www.tripadvisor.com/Hotel_Review-g612384-d627745-Reviews-Club_Bentota-Aluthgama_Western_Province.html">Club Bentota</a></li>
+                        <li><a href="https://www.tripadvisor.com/Hotel_Review-g297895-d15292088-Reviews-Cinnamon_Bentota_Beach-Bentota_Galle_District_Southern_Province.html">Cinnamon Bentota Beach</a></li>
+                        <li><a href="https://www.tripadvisor.com/Hotel_Review-g297895-d315668-Reviews-Avani_Bentota_Resort-Bentota_Galle_District_Southern_Province.html">Avani Bentota Resort</a></li>
+                        <li><a href="https://www.tripadvisor.com/Attraction_Review-g297895-d10497434-Reviews-Bentota_River-Bentota_Galle_District_Southern_Province.html">Bentota River</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
