--- a/bentota.html
+++ b/bentota.html
@@ -32,7 +32,7 @@
                         <li><a href="#">Bentota</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Donate</a></li>
+                <li><a href="donate.html">Donate</a></li>
             </ul>
         </nav>
     </header>
@@ -173,14 +173,14 @@
                     <ul>
                         <h4>Pages</h4>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Donate</a></li>
+                        <li><a href="donate.html">Donate</a></li>
                     </ul>
                 </div>
     
                 <div class="footer-list">
                     <ul>
                         <h4>Turtles</h4>
-                        <li><a href="#">Categories</a></li>
+                        <li><a href="">Categories</a></li>
                         <li><a href="#">Threats</a></li>
                         <li><a href="#">Gallery</a></li>
                     </ul>
