--- a/kosgoda.html
+++ b/kosgoda.html
@@ -32,7 +32,7 @@
                         <li><a href="bentota.html">Bentota</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Donate</a></li>
+                <li><a href="donate.html">Donate</a></li>
             </ul>
         </nav>
     </header>
@@ -209,7 +209,7 @@
                     <ul>
                         <h4>Pages</h4>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Donate</a></li>
+                        <li><a href="donate.html">Donate</a></li>
                     </ul>
                 </div>
     
