--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="bentota.html">Bentota</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Donate</a></li>
+                <li><a href="donate.html">Donate</a></li>
             </ul>
         </nav>
     </header>
@@ -281,7 +281,7 @@
                     <ul>
                         <h4>Pages</h4>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Donate</a></li>
+                        <li><a href="donate.html">Donate</a></li>
                     </ul>
                 </div>
                 
